# NFL-Nafal-Faturizki-Listener

./: .gitignore  BUGFIX-REPORT.md  Cargo.toml  PHASE-0-CHECKLIST.md  PHASE-0-DELIVERY.md  PHASE-0-SUMMARY.sh  PHASE-0.md  PHASE-1.md  QUICK-COMMANDS.sh  README.md  SETUP-COMMANDS.md  START-HERE.md  blueprint_nfl-1.md  setup-environment.sh
.github/workflows/: host-sim-ci.yml
firmware/: Cargo.toml  DMA-I2S-IMPLEMENTATION.md  memory.x
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs
firmware/src/audio/: capture.rs  pipeline.rs  playback.rs
firmware/src/audio/dsp/: compressor.rs  equalizer.rs  filters.rs  noise_gate.rs
firmware/src/ble/: gatt_server.rs
firmware/src/hal/: i2s.rs  i2s_host.rs
firmware/src/power/: manager.rs
firmware/src/storage/: flash.rs  profile.rs
mobile/rust/: Cargo.toml
mobile/rust/src/: lib.rs
scripts/: plot_stats.py  validate_e2e.py
tools/host_bench/: Cargo.toml
tools/host_bench/benches/: pipeline_bench.rs
tools/host_sim/: Cargo.toml  README.md
tools/host_sim/src/: main.rs
