[workspace]
members = [
    "firmware",
    "mobile/rust",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nafal Faturizki <nafal@nfl-hearing.org>"]
license = "GPL-3.0-only"
repository = "https://github.com/centranf1/NFL-Nafal-Faturizki-Listener"

[workspace.dependencies]
# Core async runtime untuk embedded
embassy-executor = { version = "0.5", features = ["arch-cortex-m"] }
embassy-time = { version = "0.3" }
embassy-sync = { version = "0.5" }

# HAL untuk nRF5340
embassy-nrf = { version = "0.1", features = ["nrf5340-app-s"] }
nrf-softdevice = { version = "0.1", features = ["ble-peripheral"] }

# DSP & Math
fixed = "1.23"
heapless = "0.8"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Panic handling
panic-probe = "0.3"
